--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,3 +28,5 @@ jobs:
       - run: mix ecto.create
       - run: mix ecto.migrate
       - run: mix test
+      - run: mix credo
+      - run: mix dialyzer
