--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs:
       - run: mix deps.get
       - run: mix ecto.create
       - run: mix ecto.migrate
+      - run: mix format --check-formatted
       - run: mix test
       - run: mix credo
       - run: mix dialyzer
