--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,34 @@ jobs:
       # specify any bash command here prefixed with `run: `
       - run: mix local.hex --force
       - run: mix local.rebar --force
+      - restore_cache:
+        keys:
+          - v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+          - v1-mix-cache-{{ .Branch }}
+          - v1-mix-cache
+      - restore_cache:
+        keys:
+          - v1-build-cache-{{ .Branch }}
+          - v1-build-cache
       - run: mix deps.get
+      - save_cache:
+        key: v1-mix-cache-{{ .Branch }}-{{ checksum "mix.lock" }}
+        paths: "deps"
+      - save_cache:
+        key: v1-mix-cache-{{ .Branch }}
+        paths: "deps"
+      - save_cache:
+        key: v1-mix-cache
+        paths: "deps"
+      - save_cache:
+        key: v1-build-cache-{{ .Branch }}
+        paths: "_build"
+      - save_cache:
+        key: v1-build-cache
+        paths: "_build"
+      - run:
+        name: Wait for DB
+        command: dockerize -wait tcp://localhost:5432 -timeout 1m
       - run: mix ecto.create
       - run: mix ecto.migrate
       - run: mix format --check-formatted
