--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -62,11 +62,11 @@ jobs:
       - run: mix credo
       - restore_cache:
           keys:
-            - v1-dialyzer-cache-{{ .Branch }}
+            - v1-dialyzer-cache
       - run:
           name: Run Dialyzer
           no_output_timeout: 30m
           command: MIX_ENV=dev mix dialyzer
       - save_cache:
-          key: v1-dialyzer-cache-{{ .Branch }}
+          key: v1-dialyzer-cache
           paths: "_build"
